Wind speed, humidity and styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,11 @@ html, body {
  background-color: #F3F6FA;
 }
 
+
+.montserrat {
+  font-family: var(--font-montserrat);
+}
+
 input {
   padding-left: 8px;
 }
